previous commit added only revwords without cat, lib and Makefile

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,15 +1,15 @@
 CC = gcc
-CFLAGS = -c -Wall -I.
+CFLAGS = -c -Wall -fpic -I.
 LDFLAGS = -shared
 
 all: libhelpers.so
 
 clean:
-    rm -f libhelpers.so
-    rm -f helpers.o
+	rm -f libhelpers.so
+	rm -f helpers.o
 
 libhelpers.so: helpers.o
-    $(CC) -o $@ $(LDFLAGS) $<
+	$(CC) $(LDFLAGS) $< -o $@
 
-%.o: %.c
-    $(CC) -o $@ $(CFLAGS) $<
+%.o: %.c %.h
+	$(CC) $(CFLAGS) $< -o $@
