--- a/cat/Makefile
+++ b/cat/Makefile
@@ -5,8 +5,8 @@ LIBDIR = ../lib
 LIBS_ = libhelpers.so
 LIBS = $(patsubst %,$(LIBDIR)/%,$(LIBS_))
 
-CFLAGS = -c -Wall -I$(LIBDIR)
-LDFLAGS = -L$(LIBDIR) -lhelpers
+CFLAGS = -std=c99 -I$(LIBDIR)
+LDFLAGS = -L$(LIBDIR) -Wl,-rpath=../lib -lhelpers
 
 all: $(NAME)
 
@@ -14,11 +14,8 @@ clean:
 	rm -f $(NAME)
 	rm -f $(NAME).o
 
-$(NAME): $(NAME).o $(LIBS)
-	$(CC) $(LDFLAGS) $< -o $@
+$(NAME): $(NAME).c $(LIBS)
+	$(CC) $(CFLAGS) $(LDFLAGS) $< -o $@
 
 $(LIBS):
 	$(MAKE) -C $(dir $@) $(notdir $@)
-
-%.o: %.c
-	$(CC) $(CFLAGS) $< -o $@
