filter is done; all Makefiles updated; Vim swap files have been being ignored

--- a/cat/Makefile
+++ b/cat/Makefile
@@ -13,6 +13,7 @@ all: $(NAME)
 clean:
 	rm -f $(NAME)
 	rm -f $(NAME).o
+	make clean -C $(LIBDIR)
 
 $(NAME): $(NAME).c $(LIBS)
 	$(CC) $(CFLAGS) $(LDFLAGS) $< -o $@
