--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,5 +1,5 @@
 CC = gcc
-CFLAGS = -c -Wall -fpic -I.
+CFLAGS = -g -Wall -fpic -I.
 LDFLAGS = -shared
 
 all: libhelpers.so
@@ -8,8 +8,5 @@ clean:
 	rm -f libhelpers.so
 	rm -f helpers.o
 
-libhelpers.so: helpers.o
-	$(CC) $(LDFLAGS) $< -o $@
-
-%.o: %.c %.h
-	$(CC) $(CFLAGS) $< -o $@
+libhelpers.so: helpers.c helpers.h
+	$(CC) $(CFLAGS) $(LDFLAGS) $< -o $@
