--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,12 +1,16 @@
 CC = gcc
+NAMES = helpers bufio
+LIBS = $(patsubst %,lib%.so,$(NAMES))
 CFLAGS = -g -Wall -fpic -I.
 LDFLAGS = -shared
 
-all: libhelpers.so
+all: $(LIBS)
 
-clean:
-	rm -f libhelpers.so
-	rm -f helpers.o
+libbufio.so: bufio.c bufio.h libhelpers.so
+	$(CC) $(CFLAGS) $(LDFLAGS) $< -o $@
 
 libhelpers.so: helpers.c helpers.h
 	$(CC) $(CFLAGS) $(LDFLAGS) $< -o $@
+
+clean:
+	rm -f *.so
